--- a/ImagePage/index.html
+++ b/ImagePage/index.html
@@ -40,14 +40,14 @@
 							<p>Landscape and gazebo itself.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/" class="image"><img src="images/thumbs/03.jpg" alt="" /></a>
+							<a href="images/fulls/vuforiaHuman.jpg" class="image"><img src="images/thumbs/vuforiaHuman.jpg" alt="" /></a>
 							<h2>AR Systems</h2>
 							<p>Human animation through Vuforia.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/" class="image"><img src="images/thumbs/04.jpg" alt="" /></a>
-							<h2>System processes</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<a href="images/fulls/vuforiaAR.jpg" class="image"><img src="images/thumbs/vuforiaAR.jpg" alt="" /></a>
+							<h2>More AR</h2>
+							<p>Vuforia with human on image target</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/" class="image"><img src="images/thumbs/05.jpg" alt="" /></a>
