rename and update

--- a/ImagePage/index.html
+++ b/ImagePage/index.html
@@ -35,7 +35,7 @@
 							<p>Overseeing the water and land.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/gazebo and river.jpg" class="image"><img src="images/thumbs/gazebo and river.jpg" alt="" /></a>
+							<a href="images/fulls/gazebo.jpg" class="image"><img src="images/thumbs/gazebo.jpg" alt="" /></a>
 							<h2>Gazebo View</h2>
 							<p>Landscape and gazebo itself.</p>
 						</article>
@@ -50,14 +50,14 @@
 							<p>Vuforia with human on image target</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/" class="image"><img src="images/thumbs/05.jpg" alt="" /></a>
-							<h2>Cursis aliquam nisl</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<a href="images/fulls/facial.jpg" class="image"><img src="images/thumbs/facial.jpg" alt="" /></a>
+							<h2>Abstract Identity</h2>
+							<p>Double exposure through photography and edited in Photoshop.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/06.jpg" class="image"><img src="images/thumbs/06.jpg" alt="" /></a>
-							<h2>Sed consequat phasellus</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<a href="images/fulls/pixelDetection.jpg" class="image"><img src="images/pixelDetection.jpg" alt="" /></a>
+							<h2>Color detection through pixelated image</h2>
+							<p>Pixelation and abstract painting.</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/07.jpg" class="image"><img src="images/thumbs/07.jpg" alt="" /></a>
