--- a/ImagePage/index.html
+++ b/ImagePage/index.html
@@ -55,39 +55,39 @@
 							<p>Double exposure through photography and edited in Photoshop.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/pixelDetection.jpg" class="image"><img src="images/pixelDetection.jpg" alt="" /></a>
+							<a href="images/fulls/pixelDetection.jpg" class="image"><img src="images/thumbs/pixelDetection.jpg" alt="" /></a>
 							<h2>Color detection through pixelated image</h2>
 							<p>Pixelation and abstract painting.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/07.jpg" class="image"><img src="images/thumbs/07.jpg" alt="" /></a>
-							<h2>Mauris id tellus arcu</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<a href="images/fulls/person.JPG" class="image"><img src="images/thumbs/person.JPG" alt="" /></a>
+							<h2>Interior Design Group Project</h2>
+							<p>Sense and room.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/08.jpg" class="image"><img src="images/thumbs/08.jpg" alt="" /></a>
-							<h2>Nunc vehicula id nulla</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<a href="images/fulls/revised.jpg" class="image"><img src="images/thumbs/revised.jpg" alt="" /></a>
+							<h2>Polishing up the meditative landscape</h2>
+							<p>Edits and changes to VR project.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/09.jpg" class="image"><img src="images/thumbs/09.jpg" alt="" /></a>
-							<h2>Neque et faucibus viverra</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<a href="images/fulls/studio.JPG" class="image"><img src="images/thumbs/studio.JPG" alt="" /></a>
+							<h2>Tuesday Night Opening</h2>
+							<p>Opening and people.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/10.jpg" class="image"><img src="images/thumbs/10.jpg" alt="" /></a>
-							<h2>Mattis ante fermentum</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<a href="images/fulls/vases.JPG" class="image"><img src="images/thumbs/vases.JPG" alt="" /></a>
+							<h2>AR Display</h2>
+							<p>AR rendering of artifacts.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/11.jpg" class="image"><img src="images/thumbs/11.jpg" alt="" /></a>
-							<h2>Sed ac elementum arcu</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<a href="images/fulls/aritems.JPG" class="image"><img src="images/thumbs/aritems.JPG" alt="" /></a>
+							<h2>More Items</h2>
+							<p>AR vases.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/12.jpg" class="image"><img src="images/thumbs/12.jpg" alt="" /></a>
-							<h2>Vehicula id nulla dignissim</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<a href="images/fulls/digital.JPG" class="image"><img src="images/thumbs/digital.JPG" alt="" /></a>
+							<h2>Digital Work</h2>
+							<p>Computer Processing work.</p>
 						</article>
 					</div>
 
