--- a/ImagePage/index.html
+++ b/ImagePage/index.html
@@ -80,7 +80,7 @@
 							<p>AR rendering of artifacts.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/aritems.JPG" class="image"><img src="images/thumbs/aritems.JPG" alt="" /></a>
+							<a href="images/fulls/paper.JPG" class="image"><img src="images/thumbs/paper.JPG" alt="" /></a>
 							<h2>More Items</h2>
 							<p>AR vases.</p>
 						</article>
@@ -89,6 +89,12 @@
 							<h2>Digital Work</h2>
 							<p>Computer Processing work.</p>
 						</article>
+						<article class="thumb">
+							<!-- <a href="images/fulls/digital.JPG" class="image"><img src="images/thumbs/digital.JPG" alt="" /> --></a>
+							<h2>YouTube 360 Unity Video</h2>
+							<p>VR Image 360 Virtual Camera</p>
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/XYit-LIyzv0?rel=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						</article>
 					</div>
 
 				<!-- Footer -->
@@ -96,8 +102,8 @@
 						<div class="inner split">
 							<div>
 								<section>
-									<h2>Magna feugiat sed adipiscing</h2>
-									<p>Nulla consequat, ex ut suscipit rutrum, mi dolor tincidunt erat, et scelerisque turpis ipsum eget quis orci mattis aliquet. Maecenas fringilla et ante at lorem et ipsum. Dolor nulla eu bibendum sapien. Donec non pharetra dui. Nulla consequat, ex ut suscipit rutrum, mi dolor tincidunt erat, et scelerisque turpis ipsum.</p>
+									<h2>My Practice</h2>
+									<p>I am a fully digital artist.</p>
 								</section>
 								<section>
 									<h2>Follow me on ...</h2>
