portfolio image page updates

--- a/ImagePage/index.html
+++ b/ImagePage/index.html
@@ -95,6 +95,26 @@
 							<p>VR Image 360 Virtual Camera</p>
 							<iframe width="560" height="315" src="https://www.youtube.com/embed/XYit-LIyzv0?rel=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 						</article>
+						<article class="thumb">
+							<a href="images/fulls/images.jpg" class="image"><img src="images/thumbs/images.jpg" alt="" /></a>
+							<h2>Detection Images</h2>
+							<p>Black and white pixel images.</p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/pixelations.jpg" class="image"><img src="images/thumbs/pixelations.jpg" alt="" /></a>
+							<h2>More pixelations</h2>
+							<p>Using Microsoft Kinect to detection black and white</p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/pics.jpg" class="image"><img src="images/thumbs/pics.jpg" alt="" /></a>
+							<h2>Kinect Detection</h2>
+							<p>Black and White.</p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/ribbons.JPG" class="image"><img src="images/thumbs/ribbons.JPG" alt="" /></a>
+							<h2>Abstract floats</h2>
+							<p>Floating ribbbon with reflective surfaces.</p>
+						</article>
 					</div>
 
 				<!-- Footer -->
