add-ons to the site

--- a/ImagePage/index.html
+++ b/ImagePage/index.html
@@ -115,6 +115,30 @@
 							<h2>Abstract floats</h2>
 							<p>Floating ribbbon with reflective surfaces.</p>
 						</article>
+						<article class="thumb">
+							<a href="images/fulls/prodct.JPG" class="image"><img src="images/thumbs/product.JPG" alt="" /></a>
+							<h2>MAX MSP</h2>
+							<p>Learning process of MAX for music students collaboration.</p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/wirings.JPG" class="image"><img src="images/thumbs/wirings.JPG" alt="" /></a>
+							<h2>Maker Faire Prep</h2>
+							<p>Wiring for the musical game.</p>
+						</article><article class="thumb">
+							<a href="images/fulls/room.JPG" class="image"><img src="images/thumbs/room.JPG" alt="" /></a>
+							<h2>Interior and senses</h2>
+							<p>Interior design first project through senses.</p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/floatingBlock.JPG" class="image"><img src="images/thumbs/floatingBlock.JPG" alt="" /></a>
+							<h2>Identity Avatars</h2>
+							<p>Representation of identity per cube.</p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/objs.jpg" class="image"><img src="images/thumbs/objs.jpg" alt="" /></a>
+							<h2>Artifacts</h2>
+							<p>Narrative artifacts that represents heritage.</p>
+						</article>
 					</div>
 
 				<!-- Footer -->
