--- a/imageSlide/index.html
+++ b/imageSlide/index.html
@@ -52,7 +52,7 @@ http://www.tooplate.com/view/2086-multi-color
                         <div class="collapse navbar-toggleable-md text-xs-center text-uppercase tm-navbar" id="tmNavbar">
                             <ul class="nav navbar-nav">
                                 <li class="nav-item active selected">
-                                    <a class="nav-link" href="#0" data-no="1">Homepage <span class="sr-only">(current)</span></a> 
+                                    <a class="nav-link" href="#0" data-no="1">VR and Unity Vuforia <span class="sr-only">(current)</span></a> 
                                 </li>                                
                                 <li class="nav-item">
                                     <a class="nav-link" href="#0" data-no="2">Page 2</a>
@@ -92,7 +92,7 @@ http://www.tooplate.com/view/2086-multi-color
                                             <img src="img/landscape.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Image <span>One</span></h2>
-                                                <p class="tm-figure-description">Natural Landscape.</p>
+                                                <p class="tm-figure-description">Virtual landscape in a meditative forest, through the immersive environment, the miniture temple suggests the practice of zen in a calm land. My concept with the temple is to draw a connection to mindfulness and peace from our inner spirit while using zen practices. </p>
                                                 <a href="img/landscape.jpg">View more</a>
                                             </figcaption>           
                                         </figure>
