--- a/imageSlide/index.html
+++ b/imageSlide/index.html
@@ -91,7 +91,7 @@ http://www.tooplate.com/view/2086-multi-color
                                         <figure class="effect-bubba">
                                             <img src="img/landscape.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
-                                                <h2 class="tm-figure-title">Image <span>One</span></h2>
+                                                <h2 class="tm-figure-title">Forest <span>Landscape</span></h2>
                                                 <p class="tm-figure-description">Virtual landscape in a meditative forest, through the immersive environment, the miniture temple suggests the practice of zen in a calm land. My concept with the temple is to draw a connection to mindfulness and peace from our inner spirit while using zen practices. </p>
                                                 <a href="img/landscape.jpg">View more</a>
                                             </figcaption>           
@@ -101,8 +101,8 @@ http://www.tooplate.com/view/2086-multi-color
                                         <figure class="effect-bubba">
                                             <img src="img/objects.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
-                                                <h2 class="tm-figure-title">Image <span>Two</span></h2>
-                                                <p class="tm-figure-description">Artifacts through augmented reality.</p>
+                                                <h2 class="tm-figure-title">Vuforia<span>AR</span></h2>
+                                                <p class="tm-figure-description">Seeing an artifacts through AR reality brings to the point of exposing the reality of the artifacts. Creates a narrative yet nostalgic memories of ancient times in a person's lifetime and culture.</p>
                                                 <a href="img/objects.jpg">View more</a>
                                             </figcaption>
                                         </figure>
