--- a/imageSlide/index.html
+++ b/imageSlide/index.html
@@ -111,8 +111,8 @@ http://www.tooplate.com/view/2086-multi-color
                                         <figure class="effect-bubba">
                                             <img src="img/hills.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
-                                                <h2 class="tm-figure-title">Image <span>Three</span></h2>
-                                                <p class="tm-figure-description">VR Landscape.</p>
+                                                <h2 class="tm-figure-title">Forest<span>Benches</span></h2>
+                                                <p class="tm-figure-description">The trail and path represents the navigation process of a calming mind, relaxation techniques can be used in this scene which people can practice mindfulness.</p>
                                                 <a href="img/hills.jpg">View more</a>
                                             </figcaption>           
                                         </figure>
@@ -121,8 +121,8 @@ http://www.tooplate.com/view/2086-multi-color
                                         <figure class="effect-bubba">
                                             <img src="img/overview.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
-                                                <h2 class="tm-figure-title">Image <span>Four</span></h2>
-                                                <p class="tm-figure-description">Meditational virtual landscape.</p>
+                                                <h2 class="tm-figure-title">Lake <span>View</span></h2>
+                                                <p class="tm-figure-description">Standing up on the hill oversees the entire lake and rivers from the view above. High above the hills, the view that sees the lake's horizon and the sun.</p>
                                                 <a href="img/overview.jpg">View more</a>
                                             </figcaption>           
                                         </figure>
