--- a/imageSlide/index.html
+++ b/imageSlide/index.html
@@ -131,8 +131,8 @@ http://www.tooplate.com/view/2086-multi-color
                                         <figure class="effect-bubba">
                                             <img src="img/boardGame.JPG" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
-                                                <h2 class="tm-figure-title">Image <span>Five</span></h2>
-                                                <p class="tm-figure-description">Board game prototypes.</p>
+                                                <h2 class="tm-figure-title">Gaming <span>Prototype</span></h2>
+                                                <p class="tm-figure-description">Our team project is to prototype a game. The major concept of the game is to reach to the finish line while encountering different events, this drawn to the inspiration of magical and sci-fi adventure games.</p>
                                                 <a href="img/boardGame.JPG">View more</a>
                                             </figcaption>           
                                         </figure>
@@ -141,8 +141,8 @@ http://www.tooplate.com/view/2086-multi-color
                                         <figure class="effect-bubba">
                                             <img src="img/layout.JPG" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
-                                                <h2 class="tm-figure-title">Image <span>Six</span></h2>
-                                                <p class="tm-figure-description">Regional drafting.</p>
+                                                <h2 class="tm-figure-title">Regional <span>Drafting</span></h2>
+                                                <p class="tm-figure-description">Before doing prototype a game, it is highly critical to draft a region that divides up a game section. In the regions, me and my partner decides which piece of land goes to a typical location on the graph paper. Our concept is to formulate a layout that is suitable for prototyping and playing a game.</p>
                                                 <a href="img/layout.JPG">View more</a>
                                             </figcaption>
                                         </figure>
