--- a/webpages/index.html
+++ b/webpages/index.html
@@ -38,6 +38,9 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
+        <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="../index.html">Javascript Animation</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="../ImagePage/index.html">Image Lists</a>
           </li>
@@ -55,6 +58,7 @@
             <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="coverLetter.pdf">Cover Letter</a>
           </li>
+          
         </ul>
       </div>
     </div>
@@ -66,7 +70,7 @@
       <div class="intro-text">
         <div class="intro-lead-in"></div>
         <div class="intro-heading text-uppercase"></div>
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="../index.html ">JS Animation</a>
+        <!-- <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="../index.html ">JS Animation</a> -->
       </div>
     </div>
   </header>
@@ -89,8 +93,8 @@
       </div>
     </div>
   </section>
-  <p> Photocredit: VR MeditativeLandscape </p>
-  <p> Button to Javascript animation link. </p>
+  <!-- <p> Photocredit: VR MeditativeLandscape </p>
+  <p> Button to Javascript animation link. </p> -->
   
 
   <!-- Portfolio Grid -->
