--- a/ImagePage/index.html
+++ b/ImagePage/index.html
@@ -139,6 +139,33 @@
 							<h2>Artifacts</h2>
 							<p>Narrative artifacts that represents heritage.</p>
 						</article>
+						<article class="thumb">
+							<a href="images/fulls/goggles.jpeg" class="image"><img src="images/thumbs/goggles.jpeg" alt="" /></a>
+							<h2>Maker Faire Day 02</h2>
+							<p>CADRELand project participation and collaboration a gaming objects.</p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/havingFun.jpeg" class="image"><img src="images/thumbs/havingFun.jpeg" alt="" /></a>
+							<h2>Maker Faire</h2>
+							<p>Self picture that documents the entertaining aspects of VR goggles</p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/vases.png" class="image"><img src="images/thumbs/vases.png" alt="" /></a>
+							<h2>Final Project Documentation</h2>
+							<p>Expanding the idea of artifacts, which represents underscoring the invisibility of one's culture and heritage.</p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/work01.png" class="image"><img src="images/thumbs/work01.png" alt="" /></a>
+							<h2>First Documentation</h2>
+							<p>The latter part of a proejct documentation.</p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/samples.png" class="image"><img src="images/thumbs/samples.png" alt="" /></a>
+							<h2>Second Documentation</h2>
+							<p>Documentation of all the artifacts' existence in virtual program.</p>
+						</article>
+
+
 					</div>
 
 				<!-- Footer -->
