--- a/ImagePage/index.html
+++ b/ImagePage/index.html
@@ -164,6 +164,22 @@
 							<h2>Second Documentation</h2>
 							<p>Documentation of all the artifacts' existence in virtual program.</p>
 						</article>
+						<article class="thumb">
+							<a href="images/fulls/liteWall.jpeg" class="image"><img src="images/thumbs/liteWall.jpeg" alt="" /></a>
+							<h2>Collaboration Project</h2>
+							<p>CADRE's litewall is a collabroative project through digital media art and engineering majors</p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/game.jpeg" class="image"><img src="images/thumbs/game.jpeg" alt="" /></a>
+							<h2>CADRELand Documentation</h2>
+							<p>CADRELand gameplay computer screenshot</p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/VR.jpeg" class="image"><img src="images/thumbs/VR.jpeg" alt="" /></a>
+							<h2>VR Gameplay Documentation</h2>
+							<p>A capture through people playing with VR.</p>
+						</article>
+
 
 
 					</div>
