--- a/imageSlide/index.html
+++ b/imageSlide/index.html
@@ -55,16 +55,16 @@ http://www.tooplate.com/view/2086-multi-color
                                     <a class="nav-link" href="#0" data-no="1">VR and Unity Vuforia <span class="sr-only">(current)</span></a> 
                                 </li>                                
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#0" data-no="2">Page 2</a>
+                                    <a class="nav-link" href="#0" data-no="2">Arduino and Electronics</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#0" data-no="3">Page 3</a>
+                                    <a class="nav-link" href="#0" data-no="3">MAX MSP and Arduino Electronics</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#0" data-no="4">Page 4</a>
+                                    <a class="nav-link" href="#0" data-no="4">Interior Design and MAYA Modeling</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#0" data-no="5">Page 5</a>
+                                    <a class="nav-link" href="#0" data-no="5">Photography and AR Vuforia</a>
                                 </li>
                             </ul>
                         </div>                        
