update on portfolio

--- a/imageSlide/index.html
+++ b/imageSlide/index.html
@@ -151,8 +151,8 @@ http://www.tooplate.com/view/2086-multi-color
                                         <figure class="effect-bubba">
                                             <img src="img/simulations.JPG" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
-                                                <h2 class="tm-figure-title">Image <span>Seven</span></h2>
-                                                <p class="tm-figure-description">Simulating a board game.</p>
+                                                <h2 class="tm-figure-title">Boardgame <span>Simulation</span></h2>
+                                                <p class="tm-figure-description">Simulating a board game. Our group project is doing a simulation on the topic that we designed on a board game.</p>
                                                 <a href="img/simulations.JPG">View more</a>
                                             </figcaption>           
                                         </figure>
@@ -161,8 +161,8 @@ http://www.tooplate.com/view/2086-multi-color
                                         <figure class="effect-bubba">
                                             <img src="img/compGame.JPG" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
-                                                <h2 class="tm-figure-title">Image <span>Eight</span></h2>
-                                                <p class="tm-figure-description">Game studies class game draft.</p>
+                                                <h2 class="tm-figure-title">First <span>Playable Prototype</span></h2>
+                                                <p class="tm-figure-description">Our group first designed and programmed a playable game for a draft. It functioned that we wanted in a way that it can be able to keep track the score. However, it still lacks of refinement of the player receives damage from the object.</p>
                                                 <a href="img/compGame.JPG">View more</a>
                                             </figcaption>           
                                         </figure>
@@ -171,8 +171,8 @@ http://www.tooplate.com/view/2086-multi-color
                                         <figure class="effect-bubba">
                                             <img src="img/hillGreens.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
-                                                <h2 class="tm-figure-title">Image <span>Nine</span></h2>
-                                                <p class="tm-figure-description">Hills with Grass..</p>
+                                                <h2 class="tm-figure-title">Virtual Forest<span>Grasslands</span></h2>
+                                                <p class="tm-figure-description">A perspective that shows a grass and hilly areas.</p>
                                                 <a href="img/hillGreens.jpg">View more</a>
                                             </figcaption>           
                                         </figure>
