--- a/imageSlide/index.html
+++ b/imageSlide/index.html
@@ -172,7 +172,7 @@ http://www.tooplate.com/view/2086-multi-color
                                             <img src="img/hillGreens.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Virtual Forest<span>Grasslands</span></h2>
-                                                <p class="tm-figure-description">A perspective that shows a grass and hilly areas.</p>
+                                                <p class="tm-figure-description">A perspective that shows a grass and hilly areas. Different perspective captures the wonders of the virtual meditative landscape.</p>
                                                 <a href="img/hillGreens.jpg">View more</a>
                                             </figcaption>           
                                         </figure>
@@ -181,8 +181,8 @@ http://www.tooplate.com/view/2086-multi-color
                                         <figure class="effect-bubba">
                                             <img src="img/streamline.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
-                                                <h2 class="tm-figure-title">Image <span>Ten</span></h2>
-                                                <p class="tm-figure-description">River and hills.</p>
+                                                <h2 class="tm-figure-title">Riverbank <span></span></h2>
+                                                <p class="tm-figure-description">Near the river bank, the image captures the imagery yet lively of the beauty of the natural environment.</p>
                                                 <a href="img/streamline.jpg">View more</a>
                                             </figcaption>
                                         </figure>
@@ -191,8 +191,8 @@ http://www.tooplate.com/view/2086-multi-color
                                         <figure class="effect-bubba">
                                             <img src="img/project.JPG" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
-                                                <h2 class="tm-figure-title">Image <span>Eleven</span></h2>
-                                                <p class="tm-figure-description">Musical visual development.</p>
+                                                <h2 class="tm-figure-title">MAX-MSP <span>Development</span></h2>
+                                                <p class="tm-figure-description">Musical visual development through a collaborative project with music students. Our group concept is to make a musical visual that interfaces with MIDI device which generates or produces abstract quality of aesthetics.</p>
                                                 <a href="img/project.JPG">View more</a>
                                             </figcaption>           
                                         </figure>
