--- a/ImagePage/index.html
+++ b/ImagePage/index.html
@@ -179,6 +179,11 @@
 							<h2>VR Gameplay Documentation</h2>
 							<p>A capture through people playing with VR.</p>
 						</article>
+						<article class="thumb">
+							<a href="images/fulls/water h20.jpg" class="image"><img src="images/thumbs/water h20.jpg" alt="" /></a>
+							<h2>Waterfall</h2>
+							<p>Animated stills of a water pouring.</p>
+						</article>
 
 
 
