--- a/ImagePage/index.html
+++ b/ImagePage/index.html
@@ -23,7 +23,7 @@
 						<nav>
 							<ul>
 								<li><a href="#footer" class="icon fa-info-circle">About</a></li>
-								<li><a href="../WebPages/index.html" class="icon fa-info-circle">Main Menu</a></li>
+								<li><a href="../webpages/index.html" class="icon fa-info-circle">Main Menu</a></li>
 							</ul>
 						</nav>
 					</header>
