--- a/imageSlide/index.html
+++ b/imageSlide/index.html
@@ -89,7 +89,7 @@ http://www.tooplate.com/view/2086-multi-color
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/landscape.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/landscape.jpg" alt="Image" class="img-fluid tm-img" style="width:342px;height:340px">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Forest <span>Landscape</span></h2>
                                                 <p class="tm-figure-description">Virtual landscape in a meditative forest, through the immersive environment, the miniture temple suggests the practice of zen in a calm land. My concept with the temple is to draw a connection to mindfulness and peace from our inner spirit while using zen practices. </p>
@@ -99,7 +99,7 @@ http://www.tooplate.com/view/2086-multi-color
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/objects.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/objects.jpg" alt="Image" class="img-fluid tm-img" style="width:342px;height:344px">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Vuforia<span>AR</span></h2>
                                                 <p class="tm-figure-description">Seeing an artifacts through AR reality brings to the point of exposing the reality of the artifacts. Creates a narrative yet nostalgic memories of ancient times in a person's lifetime and culture.</p>
@@ -109,7 +109,7 @@ http://www.tooplate.com/view/2086-multi-color
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/hills.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/hills.jpg" alt="Image" class="img-fluid tm-img" style="width:340px;height:344px">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Forest<span>Benches</span></h2>
                                                 <p class="tm-figure-description">The trail and path represents the navigation process of a calming mind, relaxation techniques can be used in this scene which people can practice mindfulness.</p>
