--- a/imageSlide/index.html
+++ b/imageSlide/index.html
@@ -89,7 +89,7 @@ http://www.tooplate.com/view/2086-multi-color
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/landscape.jpg" alt="Image" class="img-fluid tm-img" style="width:350px;height:347px">
+                                            <img src="img/landscape.jpg" alt="Image" class="img-fluid tm-img" >
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Forest <span>Landscape</span></h2>
                                                 <p class="tm-figure-description">Virtual landscape in a meditative forest, through the immersive environment, the miniture temple suggests the practice of zen in a calm land. My concept with the temple is to draw a connection to mindfulness and peace from our inner spirit while using zen practices. </p>
@@ -201,8 +201,8 @@ http://www.tooplate.com/view/2086-multi-color
                                         <figure class="effect-bubba">
                                             <img src="img/group project.JPG" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
-                                                <h2 class="tm-figure-title">Image <span>Twelve</span></h2>
-                                                <p class="tm-figure-description">Group project for MAX-MSP.</p>
+                                                <h2 class="tm-figure-title">Process <span> MAX-MSP</span></h2>
+                                                <p class="tm-figure-description">Group project for MAX-MSP in development for final collaboration project, using the interactive software to craft an abstract design while interfacing the MIDI device.</p>
                                                 <a href="img/group project.JPG">View more</a>
                                             </figcaption>           
                                         </figure>
